fixed the channel sections for  nav bar on mobile

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -147,7 +147,6 @@
   .sidebar-channel {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     font-size: 100px;
   }
